--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -116,7 +116,7 @@ img {
 @media screen and (max-width: 1023px){
   .nav__menu{
     position: fixed;
-    top: 0;
+    top: -100%;
     left: 0;
     background-color: var(--body-color);
     width: 100%;
@@ -137,11 +137,44 @@ img {
 }
 
 .nav__link{
-  color: var(--title-color)
-  transition: color .3s;
+  color: var(--title-color);
+  transition: color .3s ;
+}
+
+.nav__link:hover{
+  color: var(--first-color);
+}
+
+.nav__buttons{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  row-gap: .75rem;
+}
+.nav__button-link,
+.nav__button-ghost{
+  display: inline-block;
+  color: var(--title-color);
+}
+
+.nav__button-ghost{
+  background-color: hsla(0,0%100%,.3);
+  padding: 1rem 2.5rem;
+  border: 2px solid var(--title-color);
+  border-radius: .75rem
+}
+
+.nav__close{
+  position: absolute;
+  top: 1rem;
+  right: 1.5rem;
+
 }
 /* Show menu */
 
+.show-menu{
+  top:0;
+}
 
 /* Change background header */
 
