--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -166,14 +166,14 @@ img {
 
 .nav__close{
   position: absolute;
-  top: 0;
+  top: 2.5 rem;
   right: 1.5rem;
 
 }
 /* Show menu */
 
 .show-menu{
-  top:0;
+  top: 0;
 }
 
 /* Change background header */
